--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -20,6 +21,7 @@
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.381.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
